v 1.9.0
* 修复创建分组窗口创建时不在主窗口附近问题
* 修复每次添加场景和删除场景时触发连续而慢的问题
* 增加拖拽排序功能
* 修复删除最后一个分组报错的问题
* 增加创建完分组跳转到新创建的分组上
* 增加场景正在运行时切换场景的警告提醒

v 1.8.1
* 修复插件窗口打开时候关闭unity再次开启时面板报错需要load默认面板的问题

v 1.8
* 限制检测更新频率为最低3小时一次
* 新增名称检索功能
* 修复数据不自动保存问题
* 新增分组功能


v 1.7
* 增加需要更新时关于界面是否弹出选项
* 修复重新读取脚本时关于界面已开启的情况也会弹出
* 关于界面增加QQ群链接

v 1.6
* 修复关于界面升级日志的换行问题
* 修复重新读取脚本时数据丢失问题
* 新增列表自动排序功能

v 1.5
* 整理代码逻辑
* 修改目录检索逻辑
* 增加当前场景数量显示
* 增加关于面板
* 更新版本时为了防止配置文件被覆盖，改变配置文件为动态生成，已有的则动态抓取

v 1.4
* 修复删除检测场景是否丢失，丢失则弹窗提醒
* 增加右键复制场景名字和复制路径功能

v 1.3
* 修复全局添加场景时Packages里面的场景被添加的问题
* 增加场景丢失询问弹窗
* 添加场景右键功能（删除当前数据、跳转到当前场景位置）

v 1.2
* 修改脚本位置
* 新增批量拖拽功能
* 修改获取info方式为自动获取
* 删除Preferences配置

v 1.1
* 修改添加场景逻辑，避免重复代码，更改筛选逻辑
* 增加添加全局场景功能
* 修复刷新数据逻辑
* 更改data数据位置
* 关闭创建配置文件功能
* 修改目录位置

v 1.0
* 第一版