@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 6918d00c64d290d499aff026ebef776f
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
