@@ -5,6 +5,8 @@ v 1.9.0
 * 修复删除最后一个分组报错的问题
 * 增加创建完分组跳转到新创建的分组上
 * 增加场景正在运行时切换场景的警告提醒
+* 增加刷新界面按钮→Tools/Quick Open Scene/刷新主界面
+* 把获取脚本修改为static，防止获取时为null
 
 v 1.8.1
 * 修复插件窗口打开时候关闭unity再次开启时面板报错需要load默认面板的问题
